file: do not reverse collated order for files with same search rank

When two search results rank equally, we fall back to the collated
order.
Since search is usually ranked reversed (highest at the top), we need to
ensure we don't accidentally reverse the collated order as well.

https://bugzilla.gnome.org/show_bug.cgi?id=688772